[package]

name = "helloworld"
version = "0.0.1"
authors = [ "Your name <michal@vane.pl>" ]

[dependencies]

rand="0.3.0"
piston = "0.16.0"
piston2d-graphics = "0.12.0"
pistoncore-glutin_window = "0.20.0"
piston2d-opengl_graphics = "0.21.0"

[lib]
name = "testlib"
crate-type = ["dylib"]

#[[bin]]
#name = "helloworld"
#test = false
#doc = false